--- a/src/assets/style/scss/_animations.scss
+++ b/src/assets/style/scss/_animations.scss
@@ -19,3 +19,33 @@
     max-height: 600px;
   }
 }
+
+@keyframes leftToRight {
+  0% {
+    transform: translateX(-20px);
+  }
+
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+@keyframes bottomToTop {
+  0% {
+    transform: translateY(-20px);
+  }
+
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+@keyframes rightToLeft {
+  0% {
+    transform: translateX(20px);
+  }
+
+  100% {
+    transform: translateX(0px);
+  }
+}
