--- a/src/assets/style/scss/_common.scss
+++ b/src/assets/style/scss/_common.scss
@@ -6,6 +6,36 @@ html,body{
   font-family: -apple-system,BlinkMacSystemFont,Helvetica Neue,Helvetica,Roboto,Arial,PingFang SC,Hiragino Sans GB,Microsoft Yahei,Microsoft Jhenghei,sans-serif !important;
 }
 
+h1, h2, h3, h4, h5, p {
+  margin: 0;
+}
 
+.block-wrapper {
+  @include flex_layout(column, center, center);
+  position: relative;
+  width: 100%;
+  .block-header {
+    margin: 0 auto;
+    width: 1000px;
+  }
+  .block-content {
+    @include flex_layout(row, space-between, center);
+    margin: 0 auto;
+    width: 1000px;
+    .card-wrapper {
+
+    }
+  }
+}
+
+
+//modal
+.t-mask {
+  @include pos_set(fixed, 0,0,0,0);
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0);
+  transition: all .3s linear;
+}
 
 
