--- a/src/assets/style/scss/_common.scss
+++ b/src/assets/style/scss/_common.scss
@@ -38,4 +38,12 @@ h1, h2, h3, h4, h5, p {
   transition: all .3s linear;
 }
 
+.animate__animated.animate__fadeIn {
+  --animate-duration: 1.5s;
+}
+
+.animate__animated.animate__fadeOut {
+  --animate-duration: .5s;
+}
+
 
