feat: 子应用资源路径配置、UI修改

--- a/src/assets/style/scss/_common.scss
+++ b/src/assets/style/scss/_common.scss
@@ -9,6 +9,9 @@ html,body{
 h1, h2, h3, h4, h5, p {
   margin: 0;
 }
+div[data-name='longvideo-pc'], div[data-name='clip'] {
+  height: 100%;
+}
 
 .block-wrapper {
   @include flex_layout(column, center, center);
